--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
     <title>SpiderShiba</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav class="header__menu">
             <div class="header__nav__logo">
                 <img src="img/icon/navLogo.svg" alt="navLogo">
-                <p class="nav__text__logo">SpiderShiba Inu</p>
+                <p class="nav__text__logo">SpiderShiba <span class="text__logo__red">Inu</span></p>
             </div>
 
-            <div>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
-                <a href="" class="nav__item"></a>
+            <div class="nav__row">
+                <a href="" class="nav__item">How it works</a>
+                <a href="" class="nav__item">Play and earn</a>
+                <a href="" class="nav__item">Roadmap</a>
+                <a href="" class="nav__item">Team</a>
+                <a href="" class="nav__item">Partners&Investors</a>
+                <a href="" class="nav__item">Why invest in SpiderShiba</a>
+                <a href="" class="nav__item">Tokenomics</a>
+                <a href="" class="nav__item">FAQ</a>
+                <a href="" class="nav__item">Community</a>
             </div>
+
+            <button class="nav__btn__join">Join Community</button>
         </nav>
         <header class="header__content">
             <section class="header__text">
