--- a/index.html
+++ b/index.html
@@ -51,5 +51,37 @@
             </section>
         </header>
     </header>
+
+    <section class="works">
+        <h2 class="works__title">How it works?</h2>
+        <div class="works__block">
+            <div class="works__element">
+                <img src="" alt="">
+                <h3 class="block__title">SpiderShib Inu Ecosystem</h3>
+                <p>Large variety of options to use SpiderShib Inu tokens and NFTs</p>
+                <p>Our ecosystem is different from all the others, we have created the first REAL nft game with SpiderShib Inu.
+
+                    So the tokens will have real usefulness and to ensure constant growth for all holders.</p>
+            </div>
+            <div class="works__element">
+                <img src="" alt="">
+                <h3 class="block__title">Many options to earn</h3>
+                <p>Thanks to our ecosystem you will be able to earn passively and actively</p>
+                <p>The passive income:
+                    - staking
+                    - the appreciation of the staked currency
+                    
+                    The active income:
+                    - Gaming process (you will earn money that you can turn into tokens)
+                    - Re-sale of the NFTs</p>
+            </div>
+            <div class="works__element">
+                <img src="" alt="">
+                <h3 class="block__title">Reshaping DeFi</h3>
+                <p>We are evolving DeFi concepts such as participation rewards, NFTs and tokenomics to maximise profit for every investor</p>
+                <p>We offer huge tools for people around the world to take control of their financial future.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
